--- a/package.json
+++ b/package.json
@@ -4,23 +4,33 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "express":"node express/express.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "sequelize-auto -o './models' -h localhost -d ./express/db/hadith_db.db -e sqlite"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mysql2": "^3.9.7",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.0",
+    "sequelize": "^6.37.3",
+    "sequelize-auto": "^0.8.8",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
